tests/typechecker/fail/029-exhaustive-invalid-patterns.hyg
// An optional integer value.
type OptionalInt = union {
    Some: int;
    None: unit
};

fun displayOption(o: OptionalInt): unit =
    match o with {
        // Some{x} -> println(x);
        None{_} -> println("None");
        Somex{value} -> println("Some: " + value)
    };

displayOption(Some{42})